--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "build-storybook": "build-storybook -o docs"
     },
     "files": [
-        "./src",
-        "register.js"
+        "./src/**/*",
     ],
     "author": "faebeee",
     "license": "ISC",
