--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "storybook-axios",
     "version": "0.1.4",
-    "description": "",
+    "description": "Axios inspection for storybook",
+    "keywords": ["storybook", "axios", "network", "documentation", "addon"],
     "main": "./register.js",
     "scripts": {
         "dev": "npx tsc --watch",
