--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "axios",
         "network",
         "documentation",
-        "addon"
+        "addon",
+        "storybook-addons"
     ],
     "main": "./register.js",
     "scripts": {
@@ -39,5 +40,14 @@
         "@storybook/addon-links": "^6.1.11",
         "@storybook/react": "^6.1.11",
         "babel-loader": "^8.2.2"
+    },
+    "storybook": {
+        "displayName": "storybook-axios",
+        "unsupportedFrameworks": [],
+        "supportedFrameworks": [
+            "React",
+            "Vue",
+            "Angular"
+        ]
     }
 }
