--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "main": "./register.js",
     "scripts": {
         "dev": "npx tsc --watch",
-        "build": "npx tsc",
+        "build": "npx tsc && npm run build-storybook",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook -o docs"
     },
