--- a/package.json
+++ b/package.json
@@ -1,53 +1,58 @@
 {
-    "name": "storybook-axios",
-    "version": "1.0.1",
-    "description": "Axios inspection for storybook",
-    "keywords": [
-        "storybook",
-        "axios",
-        "network",
-        "documentation",
-        "addon",
-        "storybook-addons"
-    ],
-    "main": "./src/decorator.js",
-    "scripts": {
-        "dev": "npx tsc --watch",
-        "build": "npx tsc && npm run build-storybook",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook -o docs"
-    },
-    "author": "faebeee",
-    "license": "ISC",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/faebeee/storybook-axios"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^4.3.0",
-        "@storybook/addons": "^6.1.11",
-        "@storybook/components": "^6.1.11",
-        "antd": "^4.10.0",
-        "axios": "^0.21.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "typescript": "^4.1.3"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@storybook/addon-actions": "^6.1.11",
-        "@storybook/addon-essentials": "^6.1.11",
-        "@storybook/addon-links": "^6.1.11",
-        "@storybook/react": "^6.1.11",
-        "babel-loader": "^8.2.2"
-    },
-    "storybook": {
-        "displayName": "storybook-axios",
-        "unsupportedFrameworks": [],
-        "supportedFrameworks": [
-            "React",
-            "Vue",
-            "Angular"
-        ]
-    }
+  "name": "storybook-axios",
+  "version": "1.0.1",
+  "description": "Axios inspection for storybook",
+  "keywords": [
+    "storybook",
+    "axios",
+    "network",
+    "documentation",
+    "addon",
+    "storybook-addons",
+    "storybook-addon",
+    "mocking",
+    "api",
+    "graphql",
+    "data-state"
+  ],
+  "main": "./src/decorator.js",
+  "scripts": {
+    "dev": "npx tsc --watch",
+    "build": "npx tsc && npm run build-storybook",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -o docs"
+  },
+  "author": "faebeee",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/faebeee/storybook-axios"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "@storybook/addons": "^6.1.11",
+    "@storybook/components": "^6.1.11",
+    "antd": "^4.10.0",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "babel-loader": "^8.2.2"
+  },
+  "storybook": {
+    "displayName": "storybook-axios",
+    "unsupportedFrameworks": [],
+    "supportedFrameworks": [
+      "React",
+      "Vue",
+      "Angular"
+    ]
+  }
 }
