--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "commonjs",
         /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
         "jsx": "react",
-        "outDir": "./",
+        "outDir": "./dist",
         /* Redirect output structure to the directory. */
         /* Strict Type-Checking Options */
         "strict": false,
