--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
         "url": "https://github.com/faebeee/storybook-axios"
     },
     "dependencies": {
-        "@ant-design/icons": "^4.3.0",
+        "@ant-design/icons": "^5.0.0",
         "@storybook/addons": "^6.1.11",
         "@storybook/components": "^6.1.11",
-        "antd": "^4.10.0",
+        "antd": "^5.10.3",
         "axios": "^0.21.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "typescript": "^4.1.3"
+        "react-dom": "^17.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
@@ -39,7 +38,9 @@
         "@storybook/addon-essentials": "^6.1.11",
         "@storybook/addon-links": "^6.1.11",
         "@storybook/react": "^6.1.11",
-        "babel-loader": "^8.2.2"
+        "@types/react": "^17.0.75",
+        "babel-loader": "^8.2.2",
+        "typescript": "^4.9.5"
     },
     "storybook": {
         "displayName": "storybook-axios",
