--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "type": "git",
         "url": "https://github.com/faebeee/storybook-axios"
     },
+    "engines": {
+        "node": "16"
+    },
     "dependencies": {
         "@ant-design/icons": "^5.0.0",
         "@storybook/addons": "^6.1.11",
