--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     ],
     "main": "./src/decorator.js",
     "scripts": {
+        "lint": "npx biome check",
         "dev": "npx tsc --watch",
         "build": "npx tsc && npm run build-storybook",
         "storybook": "start-storybook -p 6006",
@@ -37,12 +38,14 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@biomejs/biome": "2.0.5",
         "@storybook/addon-actions": "^6.5.16",
         "@storybook/addon-essentials": "^6.5.16",
         "@storybook/addon-links": "^6.5.16",
         "@storybook/react": "^6.5.16",
         "@types/react": "^17.0.75",
         "babel-loader": "^8.2.2",
+        "dprint": "^0.50.0",
         "typescript": "^4.9.5"
     },
     "storybook": {
