--- a/package.json
+++ b/package.json
@@ -1,57 +1,62 @@
 {
-    "name": "storybook-axios",
-    "version": "2.0.0",
-    "description": "Axios inspection for storybook",
-    "keywords": [
-        "storybook",
-        "axios",
-        "network",
-        "documentation",
-        "addon",
-        "storybook-addons"
-    ],
-    "main": "./src/decorator.js",
-    "scripts": {
-        "dev": "npx tsc --watch",
-        "build": "npx tsc && npm run build-storybook",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook -o docs"
-    },
-    "author": "faebeee",
-    "license": "ISC",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/faebeee/storybook-axios"
-    },
-    "engines": {
-        "node": "16"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^5.0.0",
-        "@storybook/addons": "^6.5.16",
-        "@storybook/components": "^6.5.16",
-        "antd": "^5.10.3",
-        "axios": "^0.21.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@storybook/addon-actions": "^6.5.16",
-        "@storybook/addon-essentials": "^6.5.16",
-        "@storybook/addon-links": "^6.5.16",
-        "@storybook/react": "^6.5.16",
-        "@types/react": "^17.0.75",
-        "babel-loader": "^8.2.2",
-        "typescript": "^4.9.5"
-    },
-    "storybook": {
-        "displayName": "storybook-axios",
-        "unsupportedFrameworks": [],
-        "supportedFrameworks": [
-            "React",
-            "Vue",
-            "Angular"
-        ]
-    }
+  "name": "storybook-axios",
+  "version": "2.0.0",
+  "description": "Axios inspection for storybook",
+  "keywords": [
+    "storybook",
+    "axios",
+    "network",
+    "documentation",
+    "addon",
+    "storybook-addons"
+  ],
+  "main": "./src/decorator.js",
+  "scripts": {
+    "dev": "npx tsc --watch",
+    "build": "npx tsc && npm run build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o docs"
+  },
+  "author": "faebeee",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/faebeee/storybook-axios"
+  },
+  "engines": {
+    "node": "16"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.0.0",
+    "@storybook/addons": "7.6.20",
+    "@storybook/components": "7.6.20",
+    "antd": "^5.10.3",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.27.7",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@storybook/addon-actions": "7.6.20",
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/react": "7.6.20",
+    "@storybook/react-webpack5": "^7.6.20",
+    "@types/react": "^17.0.75",
+    "babel-loader": "^8.2.2",
+    "storybook": "^7.6.20",
+    "typescript": "^4.9.5"
+  },
+  "storybook": {
+    "displayName": "storybook-axios",
+    "unsupportedFrameworks": [],
+    "supportedFrameworks": [
+      "React",
+      "Vue",
+      "Angular"
+    ]
+  }
 }
